<resources>
    <string name="hello_world">Hello World!</string>
    <string name="app_name">Sea To Sky Mobile Banking App</string>
    <string name="footer">Sea to Sky Bank \nSquamish, B.C.</string>
    <string name="header">Sea to Sky Bank</string>

    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="rates">Current Rates</string>
    <string name="news">News</string>
    <string name="acct_summary">Account Summary</string>
    <string name="acct_detail">Account Details</string>
    <string name="branch_locator">Branch Locator</string>
    <string name="about">About Us</string>
    <string name="messages">Messages</string>


    <!-- Strings for LoginActivity -->
    <string name="card_number">Card Number</string>
    <string name="password">Password</string>
    <string name="remember_card">Remember my card</string>
    <string name="register">Register</string>

    <string name="error_invalid_email">Invalid Card Number</string>
    <string name="error_invalid_password">Invalid length</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Required Field</string>

    <string name="hint_card_number">453...</string>
    <string name="hint_password"></string>

    <string name="new_reg">Click here to Register a New Account</string>
    <string name="cancel_reg">Cancel</string>

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="security_question">Security Question</string>
    <string name="security_answer">Answer</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone #</string>
    <string name="thankyou">Thank you for registering.  Please sign in.</string>

    <string-array name="questions">
        <item>Favorite CST course?</item>
        <item>Favorite CST instructor?</item>
        <item>First street you lived on?</item>
        <item>Mother\'s maiden name</item>
        <item>First pet\'s name</item>
    </string-array>


    <!-- Strings for LocatorActivity -->
    <string name="find">Find</string>
    <string name="location">Enter Location</string>

    <!-- Strings for AcctSummaryActivity -->
    <string name="banking">Banking</string>
    <string name="borrowing">Borrowing</string>
    <string name="investing">Investing</string>

    <string-array name="banking_options">
        <item>Chequing</item>
        <item>Savings</item>
    </string-array>

    <string-array name="borrowing_options">
        <item>VISA</item>
    </string-array>

    <string-array name="investing_options">
        <item>CSB</item>
        <item>GIC</item>
        <item>TFSA</item>
        <item>RRSP</item>
        <item>Mutual Funds</item>
        <item>Stocks</item>
    </string-array>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>

    <string name="tx">Recent Transactions</string>
    <string name="date">Date</string>
    <string name="desc">Description</string>
    <string name="amount">Amount</string>
    <string name="transfer">Transfer</string>
    <string name="deposit">Deposit</string>
    <string name="pay_bill">Pay Bill</string>

    <string-array name="accounts">
        <item>Chequing</item>
        <item>Savings</item>
    </string-array>

    <string-array name="accounts_rev">
        <item>Savings</item>
        <item>Chequing</item>
    </string-array>

    <string-array name="payees">
        <item>Sea to Sky VISA</item>
        <item>B.C. Hydro</item>
        <item>B.C.I.T.</item>
        <item>Medical Services Plan of B.C.</item>
        <item>Netflix</item>
        <item>Rogers Mobility</item>
        <item>Shaw Cable Systems</item>
    </string-array>



    <string name="title_activity_tabbed">Account Dashboard</string>

    <string name="title_section1">Summary</string>
    <string name="title_section2">Pay Bills</string>
    <string name="title_section3">Transfer</string>

    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_two_buttons_title">SOME STRING?</string>


</resources>
