<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mae.comp3717.bcit.ca.seatoskybank.LoginActivity"
    >

    <TextView
        android:id="@+id/header"
        android:text="@string/header"
        android:textSize="32sp"
        android:textColor="#990000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />

    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/login_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/login_row1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp"
                    >

                    <TextView
                        android:id="@+id/tv_card_number"
                        android:text="@string/card_number"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <AutoCompleteTextView
                        android:id="@+id/card_number"
                        android:textSize="16sp"
                        android:inputType="number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:hint="@string/hint_card_number"
                        android:maxLines="1"
                        android:singleLine="true" />
                </TableRow>


                <TableRow
                    android:id="@+id/login_row2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_pwd"
                        android:text="@string/password"
                        android:textSize="16sp"
                        android:gravity="end"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        />

                    <EditText android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </TableRow>
            </TableLayout>


            <Switch
                android:id="@+id/remember_me"
                android:text="@string/remember_card"
                android:textSize="16sp"
                android:textColor="#777777"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/sign_in_button"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#990000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:onClick="signin" />

            <Button
                android:id="@+id/create_registration"
                android:text="@string/new_reg"
                android:textSize="16sp"
                android:textColor="#990000"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="showRegistration" />

            <TableLayout
                android:id="@+id/reg_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/reg_row1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tv_firstname"
                        android:text="@string/firstname"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:id="@+id/et_firstname"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:maxLines="1"
                        android:singleLine="true"
                        />
                </TableRow>

                <TableRow
                    android:id="@+id/reg_row2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tv_lastname"
                        android:text="@string/lastname"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:id="@+id/et_lastname"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        />
                </TableRow>

                <TableRow
                    android:id="@+id/reg_row3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tv_email"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        />

                    <EditText
                        android:id="@+id/et_email"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        />

                </TableRow>

                <TableRow
                    android:id="@+id/reg_row4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tv_phone"
                        android:text="@string/phone"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        />

                    <EditText
                        android:id="@+id/et_phone"
                        android:textSize="16sp"
                        android:inputType="phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        />
                </TableRow>

                <TableRow
                    android:id="@+id/reg_row5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    >

                    <TextView
                        android:id="@+id/tv_securityQ"
                        android:text="@string/security_question"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        />

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:entries="@array/questions"
                        android:layout_weight="0.75"/>
                    <!--
                    <EditText
                        android:id="@+id/et_securityQ"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        />-->
                </TableRow>

                <TableRow
                    android:id="@+id/reg_row6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tv_securityA"
                        android:text="@string/security_answer"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        />

                    <EditText
                        android:id="@+id/et_securityA"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/registration_button"
                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#990000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:onClick="register"
                />

            <Button
                android:id="@+id/cancel_registration"
                android:text="@string/cancel_reg"
                android:textSize="16sp"
                android:textColor="#990000"
                android:background="#fafafa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:onClick="hideRegistration" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

