<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mae.comp3717.bcit.ca.bankingapp.AcctDetailActivity">

    <LinearLayout
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#990000"
        >
    <TextView
        android:id="@+id/tv_curBal"
        android:text="Current Balance"
        style="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tv_acct_balance"
        android:text="$ #,###.##"
        style="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="right"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/tx_header"
        android:text="@string/tx"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="#999999"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_header"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        />

    <TableLayout
        android:id="@+id/details_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            >

            <TextView
                android:id="@+id/th_date"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                />

            <TextView
                android:id="@+id/th_desc"
                android:text="@string/desc"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                />

            <TextView
                android:id="@+id/th_amount"
                android:text="@string/amount"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >
            <TextView
                android:text="2015-10-05"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
            <TextView
                android:text="GST Refund"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50" />
            <TextView
                android:text="$ 96.87"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >
            <TextView
                android:text="2015-10-04"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
            <TextView
                android:text="VISA Payment"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50" />
            <TextView
                android:text="- $ 65.73"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >
            <TextView
                android:text="2015-10-01"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
            <TextView
                android:text="ABM Withdrawal"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50" />
            <TextView
                android:text="- $ 100.00"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >
            <TextView
                android:text="2015-08-31"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
            <TextView
                android:text="BCIT Tuition"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50" />
            <TextView
                android:text="- $ 3,152.73"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >
            <TextView
                android:text="2015-09-04"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
            <TextView
                android:text="VISA Payment"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50" />
            <TextView
                android:text="- $ 187.88"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >
            <TextView
                android:text="2015-08-28"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
            <TextView
                android:text="Pay Day"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50" />
            <TextView
                android:text=" $ 1,500.00"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
